<resources>
    <string name="app_name"></string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="vpassword">vPassword</string>
    <string name="login_form">Login_form</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="record">Record</string>
    <string name="text_will_appear_here">Text will appear here</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">forgot password?</string>
    <string name="confirm_password">confirm password</string>
</resources>